fix cropping in really small devices

--- a/src/pages/Play/component/Grid/style.module.scss
+++ b/src/pages/Play/component/Grid/style.module.scss
@@ -7,11 +7,11 @@
         justify-content: space-between;
         width: 90%;
         margin: auto;
+        @media (max-width: 395px) {
+            width:100%;
+        }
         .item { 
             width: 102px;
-            @media (max-width: 395px) {
-                width: 85px;
-            }
             height: 78px;
             box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.175);
             margin: 8px;
